Inscription et connexion

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,12 +32,33 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
+                    {% if app.user %}
+                    <li class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownLink">
+                            <img class="rounded-circle avatar-mini" style="width: 200px;height: 200px;"
+                                    {% if app.user.profilePicture matches '{^(https)://}' %}
+                                        src="{{ app.user.profilePicture ?? null }}"
+                                    {% else %}
+                                        src="/uploads/{{ app.user.profilePicture ?? null }}"
+                                    {% endif %} alt="profil">
+                            {{ app.user.firstName }} {{ app.user.lastName }}
+                        </a>
+
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a href="" class="dropdown-item">Paramètres</a>
+                            <a href="" class="dropdown-item">Mes souvenirs</a>
+                            <div class="dropdown-divider"></div>
+                            <a href="{{ path('app_logout') }}" class="dropdown-item">Se déconnecter</a>
+                        </div>
+                    </li>
+                    {% else %}
                     <li class="class-item">
                         <a href="" class="nav-link">Participer au projet</a>
                     </li>
                     <li class="class-item"></li>
                         <a href="{{ path('login') }}" class="nav-link">Se connecter</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
