--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,6 +63,15 @@
             </div>
         </nav>
     </header>
+    {% for label, messages in app.flashes %}
+        <div class="container">
+            <div class="alert alert-{{ label }}">
+                {% for message in messages %}
+                    <p>{{ message | raw }}</p> {# Filtre raw permet d'intépreter toutes les balises HTML incluent dans des accolades Twig#}
+                {% endfor %}
+            </div>
+        </div>
+    {% endfor %}
     <body>
         {% block body %}{% endblock %}
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
