--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,7 +53,7 @@
                     </li>
                     {% else %}
                     <li class="class-item">
-                        <a href="" class="nav-link">Participer au projet</a>
+                        <a href="{{ path('registration') }}" class="nav-link">Participer au projet</a>
                     </li>
                     <li class="class-item"></li>
                         <a href="{{ path('login') }}" class="nav-link">Se connecter</a>
