--- a/templates/user/settings.html.twig
+++ b/templates/user/settings.html.twig
@@ -18,7 +18,9 @@
                         <div class="mb-4">{{ form_widget(form.firstName) }}</div>
                         <div class="mb-4">{{ form_widget(form.lastName) }}</div>
                         <div class="mb-4">{{ form_widget(form.profilePicture) }}</div>
-                        <button type="button" class="btn btn-warning my-4"><a href="" class="changePassword">Change my password</a></button>
+                        <button type="button" class="btn btn-info my-4">
+                            <a href="" class="changePassword" style="text-decoration: none; color: white;">Changer mon mot de passe</a>
+                        </button>
                     </div>
                     <div class="col-md-4 row flex-column flex-nowrap mb-5">
                         <div class="col-md-9 mt-3 text-center mx-auto">
@@ -32,14 +34,14 @@
                     </div>
                 </div>
                 <div class="mb-4">{{ form_widget(form.biography) }}</div>
-                <button type="submit" class="btn btn-primary mb-4">Save changes</button>
+                <button type="submit" class="btn btn-info mb-4">Sauvegarder les changements</button>
                 {{ form_end(form) }}
             </div>
             <br>
             <br>
             <div class="row justify-content-center">
                 <button type="button" class="btn btn-danger my-4 col-3" data-toggle="modal" data-target="#myModal">
-                    Delete my account
+                    Supprimer mon compte
                 </button>
             </div>
             <!-- Modal -->
@@ -51,12 +53,12 @@
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <h4>We are sad to see you go...</h4>
-                            <p>Are you sure you want to delete your account on Bookshelves?</p>
+                            <h4>Êtes-vous certain(e) de vouloir supprimer votre compte ?</h4>
+                            <p>Vos souvenirs et votre profil disparaîtront du site.</p>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-danger"><a href="">Yes</a></button>
-                            <button class="button btn btn-success" data-dismiss="modal">No</button>
+                            <button type="button" class="btn btn-danger"><a href="">Oui</a></button>
+                            <button class="button btn-sm btn-success" data-dismiss="modal">Non</button>
                         </div>
                     </div>
                 </div>
