--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,7 @@
                         </a>
 
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a href="" class="dropdown-item">Paramètres</a>
+                            <a href="{{ path('settings') }}" class="dropdown-item">Paramètres</a>
                             <a href="" class="dropdown-item">Mes souvenirs</a>
                             <div class="dropdown-divider"></div>
                             <a href="{{ path('app_logout') }}" class="dropdown-item">Se déconnecter</a>
