--- a/templates/user/settings.html.twig
+++ b/templates/user/settings.html.twig
@@ -40,7 +40,7 @@
             <br>
             <br>
             <div class="row justify-content-center">
-                <button type="button" class="btn btn-danger my-4 col-3" data-toggle="modal" data-target="#myModal">
+                <button type="button" class="btn btn-sm btn-danger my-4 col-3" data-toggle="modal" data-target="#myModal">
                     Supprimer mon compte
                 </button>
             </div>
@@ -57,8 +57,10 @@
                             <p>Vos souvenirs et votre profil disparaîtront du site.</p>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-danger"><a href="">Oui</a></button>
-                            <button class="button btn-sm btn-success" data-dismiss="modal">Non</button>
+                            <button type="button" class="button btn-danger">
+                                <a href="{{ path('delete_account') }}" style="text-decoration: none; color: white;">Oui</a>
+                            </button>
+                            <button class="button btn-success" data-dismiss="modal">Non</button>
                         </div>
                     </div>
                 </div>
