--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Se connecter{% endblock %}
+{% block title %} Login{% endblock %}
 
 {% block body %}
 
@@ -13,7 +13,7 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <div class="bg-light py-3 px-3">
-                    <h1 class="text-center my-4">Se connecter à ...</h1>
+                    <h1 class="text-center">Log in !</h1>
 
 
                     <form action="{{ path('login') }}" method="POST">
@@ -21,10 +21,10 @@
                             <input type="text" name="_username" id="email" class="form-control" placeholder="Email" required value="{{ last_username }}">
                         </div>
                         <div class="form-group">
-                            <input type="password" name="_password" id="password" class="form-control" placeholder="Mot de passe" required>
+                            <input type="password" name="_password" id="password" class="form-control" placeholder="Password" required>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-success">Se connecter</button>
+                            <button type="submit" class="btn btn-success">Log in</button>
                         </div>
                     </form>
                 </div>
