Début mise en forme page souvenirs

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="#">A propos d'Alain</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Souvenirs, souvenirs</a>
+                        <a class="nav-link" href="{{ path('memories') }}">Souvenirs, souvenirs</a>
                     </li>
                     <li>
                         <a class="nav-link" href="{{ path('users') }}">Les contributeurs</a>
