--- a/templates/memory/index.html.twig
+++ b/templates/memory/index.html.twig
@@ -1,7 +1,40 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MemoryController!{% endblock %}
+{% block title %}Souvenirs, souvenirs{% endblock %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/memory.css') }}">
+{% endblock %}
 
 {% block body %}
+
+    <header class="masthead text-center text-white d-flex">
+        <div class="container my-auto">
+            <div class="row">
+                <div class="col-lg-10 mx-auto">
+                    <h1 class="text-uppercase">
+                        <strong>Souvenirs, souvenirs</strong>
+                    </h1>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="container">
+        <h1 class="text-center mt-5 mb-5">Les derniers souvenirs ajoutés</h1>
+        <div class="row">
+            {% for latestMemory in latestMemories %}
+                <div class="col-md-4">
+                    <div class="card bg-light mb-3">
+
+                        <h4 class="text-center mt-1">{{ latestMemory.title }}</h4>
+                        <p class="text-center mt-1">de {{ latestMemory.user.firstName }} {{ latestMemory.user.lastName }}</p>
+
+                        <a href="" class="btn btn-primary mx-auto my-2 d-block">More</a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 
 {% endblock %}
