--- a/templates/user/settings.html.twig
+++ b/templates/user/settings.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Paramètres{% endblock %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/user.css') }}">
+{% endblock %}
+
 {% block body %}
 
     <div class="container text-center">
