--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,6 +51,7 @@
                         <div class="dropdown-menu dropdown-menu-right">
                             <a href="{{ path('settings') }}" class="dropdown-item">Paramètres</a>
                             <a href="" class="dropdown-item">Mes souvenirs</a>
+                            <a href="{{ path('memory_creation') }}" class="dropdown-item">Partager un souvenir</a>
                             <div class="dropdown-divider"></div>
                             <a href="{{ path('app_logout') }}" class="dropdown-item">Se déconnecter</a>
                         </div>
