--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,7 +50,7 @@
 
                         <div class="dropdown-menu dropdown-menu-right">
                             <a href="{{ path('settings') }}" class="dropdown-item">Paramètres</a>
-                            <a href="" class="dropdown-item">Mes souvenirs</a>
+                            <a href="{{ path('user_memories') }}" class="dropdown-item">Mes souvenirs</a>
                             <a href="{{ path('memory_creation') }}" class="dropdown-item">Partager un souvenir</a>
                             <div class="dropdown-divider"></div>
                             <a href="{{ path('app_logout') }}" class="dropdown-item">Se déconnecter</a>
