--- a/templates/memory/show.html.twig
+++ b/templates/memory/show.html.twig
@@ -10,7 +10,7 @@
 
 
     <div class="container">
-        <h1>{{ memory.title }}</h1>
+        <h1 class="mt-5">{{ memory.title }}</h1>
     </div>
     <div class="container corpArticle">
         <div class="row">
