--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,6 +2,38 @@
 
 {% block title %}Accueil{% endblock %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{{ asset('assets/css/home.css') }}">
+{% endblock %}
+
 {% block body %}
+
+    <header class="masthead text-center text-white d-flex">
+        <div class="container my-auto">
+            <div class="row">
+                <div class="col-lg-10 mx-auto">
+                    <h1 class="text-uppercase">
+                        <strong>TITLE</strong>
+                    </h1>
+                    <h4 class="text-white">Des souvenirs pour les 60 ans d'Alain</h4>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="need bg-primary" id="about">
+        <div class="container">
+            <div class="row my-5">
+                <div class="col-lg-8 mx-auto text-center">
+                    <h2 class="section-heading">TITRE</h2>
+                    <hr class="light my-4">
+                    <p class="mb-5">
+                        TODO : petite présentation
+                    </p>
+                    <a class="btn btn-light btn-xl mb-5" href="{{ path('registration') }}">Commencer l'aventure</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
