--- a/templates/memory/index.html.twig
+++ b/templates/memory/index.html.twig
@@ -39,7 +39,7 @@
                         <h4 class="text-center mt-1">{{ latestMemory.title }}</h4>
                         <p class="text-center mt-1">de {{ latestMemory.user.firstName }} {{ latestMemory.user.lastName }}</p>
 
-                        <a href="{{ path('memory_show', {'id': latestMemory.id}) }}" class="btn btn-secondary mx-auto my-2 d-block">More</a>
+                        <a href="{{ path('memory_show', {'id': latestMemory.id}) }}" class="btn btn-secondary mx-auto my-2 d-block">Voir le souvenir</a>
                     </div>
                 </div>
             {% endfor %}
