--- a/templates/memory/user_memories.html.twig
+++ b/templates/memory/user_memories.html.twig
@@ -26,7 +26,7 @@
                         </div>
                         <h4 class="text-center mt-1">{{ memory.title }}</h4>
 
-                        <a href="{{ path('memory_show', {'id': memory.id}) }}" class="btn btn-secondary mx-auto my-2 d-block">More</a>
+                        <a href="{{ path('memory_show', {'id': memory.id}) }}" class="btn btn-secondary mx-auto my-2 d-block">Voir le souvenir</a>
                     </div>
                 </div>
             {% endfor %}
