--- a/public/assets/css/memory.css
+++ b/public/assets/css/memory.css
@@ -24,3 +24,12 @@ header.masthead {
     text-decoration: none;
     color: black;
 }
+
+.memory a, .memory a:hover, .memory a:visited {
+    text-decoration: none;
+    color: white;
+}
+
+.memoryImage {
+    width: 400px;
+}
