--- a/templates/memory/show.html.twig
+++ b/templates/memory/show.html.twig
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-md-8 mb-3 mt-5 text-justify">
                 {{ memory.content | raw }}
-            </div>
+r            </div>
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
