--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,16 +12,13 @@
     </head>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{{ path('home') }}">TITLE</a>
+            <a class="navbar-brand" href="{{ path('home') }}"><i class="fas fa-home ml-3 mb-2"></i></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('home') }}">Accueil</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">A propos d'Alain</a>
                     </li>
