--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,9 +13,8 @@
             <div class="row">
                 <div class="col-lg-10 mx-auto">
                     <h1 class="text-uppercase">
-                        <strong>TITLE</strong>
+                        <strong>Des souvenirs pour les 60 ans d'Alain</strong>
                     </h1>
-                    <h4 class="text-white">Des souvenirs pour les 60 ans d'Alain</h4>
                     <br>
                 </div>
             </div>
