--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,7 +13,7 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <div class="bg-light py-3 px-3">
-                    <h1 class="text-center">Log in !</h1>
+                    <h1 class="text-center">Se connecter</h1>
 
 
                     <form action="{{ path('login') }}" method="POST">
