--- a/templates/user/registration.html.twig
+++ b/templates/user/registration.html.twig
@@ -8,7 +8,7 @@
     <div class="container text-center">
         <div class="card mx-auto mt-5" style="width: 50em;">
             <div class="card-header">
-                <h1>Inscription à ...</h1>
+                <h1>Inscription</h1>
             </div>
             {{ form_start(form) }}
             <div class="my-4">{{ form_widget(form.firstName) }}</div>
