--- a/templates/user/settings.html.twig
+++ b/templates/user/settings.html.twig
@@ -11,7 +11,7 @@
     <div class="container text-center">
         <div class="card mx-auto mt-5">
             <div class="card-header">
-                <h1 class="text-center mt-5 mb-5">Settings</h1>
+                <h1 class="text-center mt-5 mb-5">Paramètres</h1>
             </div>
 
             <div class="container">
