Mofid page accueil + registration avec envoi de mail début

--- a/templates/user/registration.html.twig
+++ b/templates/user/registration.html.twig
@@ -1,7 +1,7 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Inscription à ... {% endblock %}
+{% block title %}Inscription{% endblock %}
 
 {% block body %}
 
