--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -23,38 +23,61 @@
     <section class="need bg-primary" id="about">
         <div class="container">
             <div class="row my-5">
-                <div class="col-lg-8 mx-auto text-center">
-                    <h2 class="section-heading">Le projet</h2>
-                    <hr class="light my-4">
-                    <p class="mb-5">
-                        Le <strong>25 mars 1960</strong>, dans la petite ville de Strasbourg, <strong>Alain</strong> voyait le jour.<br/>
-                        En <strong>2020</strong>, le petit Alain a bien grandit (et un peu vieillit, il faut bien l'admettre...).
-                        Au courant de ces <strong>60 années</strong>, il a pas mal vécu et rencontré beaucoup de personnes : famille, amis ou
-                        connaissances.<br/>
-                        Aujourd'hui, nous avons besoin de vous, qui avez marqué la vie d'Alain de près ou de loin.<br/>
-                        Nous avons besoin de vous pour lui transmettre un cadeau un peu particulier : <strong>les plus beaux
-                            souvenirs</strong> que vous avez avec lui.
-                    </p>
-                    <h2>Comment ?</h2>
-                    <hr class="light my-4">
-                    <p class="mb-5">
-                        Rien de plus simple ! Il vous suffit de suivre la procédure suivante :<br/><br>
-                        <strong>1.</strong> Cliquez sur le bouton "Participer au projet" ci-dessous<br/>
-                        <strong>2.</strong> Remplissez le formulaire d'inscription<br/>
-                        <strong>3.</strong> Un e-mail sera envoyé à l'administrateur du site afin que votre inscription soit validée<br/>
-                        <strong>4.</strong> Une fois votre inscription validée, vous pourrez vous connecter afin de participer au projet !<br/>
-                    </p>
-                    <h2>Et après ?</h2>
-                    <hr class="light my-4">
-                    <p class="mb-5">
-                        Des souvenirs pourront être postés <strong>jusqu'au 25 mars 2020</strong>, date des 60 ans d'Alain. Le lien du <br/>
-                        site lui sera ensuite révélé afin qu'il puisse pleinement se remémorer de tous les bons moments
-                        passés avec vous tous.
-                    </p>
-                    <hr class="light my-4">
-                    <a class="btn btn-info btn-xl mb-5" href="{{ path('registration') }}">Commencer l'aventure</a>
+                <div class="col-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2 class="section-heading text-center">Le projet</h2>
+                        </div>
+                        <div class="card-body text-center">
+                            <p class="mb-5">
+                            Le <strong>25 mars 1960</strong>, dans la petite ville de Strasbourg, <strong>Alain</strong> voyait le jour.<br/>
+                            En <strong>2020</strong>, le petit Alain a bien grandit (et un peu vieillit, il faut bien l'admettre...).
+                            Au courant de ces <strong>60 années</strong>, il a pas mal vécu et rencontré beaucoup de personnes : famille, amis ou
+                            connaissances.<br/>
+                            Aujourd'hui, nous avons besoin de vous, qui avez marqué la vie d'Alain de près ou de loin.<br/>
+                            Nous avons besoin de vous pour lui transmettre un cadeau un peu particulier : <strong>les plus beaux
+                                souvenirs</strong> que vous avez avec lui.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2 class="section-heading text-center">Comment ?</h2>
+                        </div>
+                        <div class="card-body text-center">
+                            <p class="mb-5">
+                                Rien de plus simple ! Il vous suffit de suivre la procédure suivante :<br/><br>
+                                <strong>1.</strong> Cliquez sur le bouton "Commencer l'aventure" ci-dessous <i class="fas fa-arrow-down"></i><br/>
+                                <strong>2.</strong> Remplissez le formulaire d'inscription<br/>
+                                <strong>3.</strong> Un e-mail sera envoyé à l'administrateur du site afin que votre inscription soit validée<br/>
+                                <strong>4.</strong> Une fois votre inscription validée, vous pourrez vous connecter afin de participer au projet !<br/>
+                                Si vous avez une question, n'hésitez surtout pas à la poser dans le formulaire de Contact
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2 class="section-heading text-center">Et après ?</h2>
+                        </div>
+                        <div class="card-body text-center">
+                            <p class="mb-5">
+                                Des souvenirs pourront être postés <strong>jusqu'à début mars 2020</strong>. Le site se fera
+                                ensuite une beauté pour pouvoir être présenté à Alain le jour de son anniversaire. <br/><br/><br/><br/>
+                                <i class="fas fa-exclamation-triangle"></i> <strong>ATTENTION !</strong><br/>
+                                Ce projet est TOP SECRET ! Alain ne doit pas être au courant : la surprise n'en sera que
+                                plus belle !
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="mx-auto text-center">
+                <hr class="light my-4">
+                <a class="btn btn-primary btn-xl mb-5" href="{{ path('registration') }}">Commencer l'aventure</a></div>
         </div>
     </section>
 
