Début espace admin

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,6 +50,8 @@
                             <a href="{{ path('user_memories') }}" class="dropdown-item">Mes souvenirs</a>
                             <a href="{{ path('memory_creation') }}" class="dropdown-item">Partager un souvenir</a>
                             <div class="dropdown-divider"></div>
+                            <a href="{{ path('admin') }}" class="dropdown-item">Espace admin</a>
+                            <div class="dropdown-divider"></div>
                             <a href="{{ path('app_logout') }}" class="dropdown-item">Se déconnecter</a>
                         </div>
                     </li>
