--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">A propos d'Alain</a>
+                        <a class="nav-link" href="{{ path('about') }}">A propos d'Alain</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('memories') }}">Souvenirs, souvenirs</a>
