--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -23,8 +23,8 @@
                         <div class="form-group">
                             <input type="password" name="_password" id="password" class="form-control" placeholder="Password" required>
                         </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-success">Log in</button>
+                        <div class="form-group d-flex justify-content-end">
+                            <button type="submit" class="btn btn-success">Se connecter</button>
                         </div>
                     </form>
                 </div>
