--- a/templates/user/registration.html.twig
+++ b/templates/user/registration.html.twig
@@ -5,18 +5,32 @@
 
 {% block body %}
 
-    <div class="container text-center">
-        <div class="card mx-auto mt-5" style="width: 50em;">
-            <div class="card-header">
-                <h1>Inscription</h1>
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <div class="bg-light py-3 px-3">
+                    <h1 class="text-center">S'inscrire</h1>
+
+                    {{ form_start(form) }}
+                    <div class="form-group">
+                        {{ form_widget(form.firstName) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_widget(form.lastName) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_widget(form.email) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form_widget(form.password) }}
+                    </div>
+                        <div class="form-group d-flex justify-content-end">
+                            <button type="submit" class="btn btn-success">S'inscrire</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-            {{ form_start(form) }}
-            <div class="my-4">{{ form_widget(form.firstName) }}</div>
-            <div class="mb-4">{{ form_widget(form.lastName) }}</div>
-            <div class="mb-4">{{ form_widget(form.email) }}</div>
-            <div class="mb-4">{{ form_widget(form.password) }}</div>
-            <button type="submit" class="btn btn-success mb-4">S'inscrire !</button>
-            {{ form_end(form) }}
         </div>
     </div>
 
