--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="alerte alert-danger">Une erreur s'est produite lors de la connexion</div>
     {% endif %}
 
     <div class="container">
