--- a/templates/user/registration.html.twig
+++ b/templates/user/registration.html.twig
@@ -1,4 +1,3 @@
-
 {% extends 'base.html.twig' %}
 
 {% block title %}Inscription{% endblock %}
@@ -25,10 +24,13 @@
                     <div class="form-group">
                         {{ form_widget(form.password) }}
                     </div>
+                    <div class="form-group">
+                        {{ form_widget(form.passwordConfirm) }}
+                    </div>
                         <div class="form-group d-flex justify-content-end">
                             <button type="submit" class="btn btn-success">S'inscrire</button>
                         </div>
-                    </form>
+                    {{ form_end(form) }}
                 </div>
             </div>
         </div>
