--- a/templates/memory/createMemory.html.twig
+++ b/templates/memory/createMemory.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Création d'un souvenir{% endblock %}
 
+{% form_theme form 'memory/_collection.html.twig' %}
+
 {% block body %}
 
     <div class="container">
@@ -13,9 +15,13 @@
         <div class="my-4">{{ form_widget(form.title) }}</div>
         <div class="mb-4">Votre souvenir : {{ form_widget(form.content) }}</div>
         <div class="mb-4">Vous pouvez ajouter une photo à votre souvenir : </div>
-        <div class="mb-4">{{ form_widget(form.pictures) }}</div>
+        <div class="mb-4">{{ form_widget(form.images) }}</div>
         <button type="submit" class="btn btn-success mb-4 float-right">Envoyer votre souvenir</button>
         {{ form_end(form) }}
     </div>
 
+{% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('assets/js/memory.js') }}"></script>
 {% endblock %}
