--- a/templates/memory/createMemory.html.twig
+++ b/templates/memory/createMemory.html.twig
@@ -16,7 +16,9 @@
         <div class="mb-4">Votre souvenir : {{ form_widget(form.content) }}</div>
         <div class="mb-4">Vous pouvez ajouter une photo à votre souvenir : </div>
         <div class="mb-4">{{ form_widget(form.images) }}</div>
-        <button type="submit" class="btn btn-success mb-4 float-right">Envoyer votre souvenir</button>
+        <div class="d-flex justify-content-end">
+            <button class="btn btn-success">{{ button_label|default('Envoyer le souvenir') }}</button>
+        </div>
         {{ form_end(form) }}
     </div>
 
