Modifs images memory

--- a/templates/memory/createMemory.html.twig
+++ b/templates/memory/createMemory.html.twig
@@ -26,4 +26,5 @@
 
 {% block javascripts %}
     <script src="{{ asset('assets/js/memory.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('assets/js/browser.js') }}"></script>
 {% endblock %}
