--- a/templates/memory/user_memories.html.twig
+++ b/templates/memory/user_memories.html.twig
@@ -10,27 +10,36 @@
 
     <div class="container">
         <h1 class="text-center mt-5">Vos souvenirs</h1>
-        <div class="row mt-5">
-            {% for memory in user.memories %}
-                <div class="col-md-4">
-                    <div class="card bg-light mb-3">
-                        <div class="image_outer_container">
-                            <div class="image_inner_container text-center">
-                                <img
-                                {% if user.profilePicture matches '{^(https)://}' %}
-                                    src="{{ user.profilePicture ?? null }}"
-                                {% else %}
-                                    src="/uploads/{{ user.profilePicture ?? null }}"
-                                {% endif %} alt="profil">
+            {% if user.memories | length > 0 %}
+                <div class="row mt-5">
+                {% for memory in user.memories %}
+                    <div class="col-md-4">
+                        <div class="card bg-light mb-3">
+                            <div class="image_outer_container">
+                                <div class="image_inner_container text-center">
+                                    <img
+                                    {% if user.profilePicture matches '{^(https)://}' %}
+                                        src="{{ user.profilePicture ?? null }}"
+                                    {% else %}
+                                        src="/uploads/{{ user.profilePicture ?? null }}"
+                                    {% endif %} alt="profil">
+                                </div>
                             </div>
-                        </div>
-                        <h4 class="text-center mt-1">{{ memory.title }}</h4>
+                            <h4 class="text-center mt-1">{{ memory.title }}</h4>
 
-                        <a href="{{ path('memory_show', {'id': memory.id}) }}" class="btn btn-secondary mx-auto my-2 d-block">Voir le souvenir</a>
+                            <a href="{{ path('memory_show', {'id': memory.id}) }}" class="btn btn-secondary mx-auto my-2 d-block">Voir le souvenir</a>
+                        </div>
+                    </div>
+                {% endfor %}
+                </div>
+            {% else %}
+                <div class="row mt-5">
+                    <div class="col-12 alert alert-info text-center">
+                        <div class="col-12">Vous n'avez pas encore partagé de souvenirs</div>
+                        <a href="{{ path('memory_creation') }}" class="btn btn-info my-4">Partager un souvenir</a>
                     </div>
                 </div>
-            {% endfor %}
-        </div>
+            {% endif %}
     </div>
 
 {% endblock %}
