Ajout d'une image dans souvenir

--- a/templates/user/settings.html.twig
+++ b/templates/user/settings.html.twig
@@ -73,3 +73,7 @@
     </div>
 
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('assets/js/settings.js') }}"></script>
+{% endblock %}
