--- a/templates/memory/createMemory.html.twig
+++ b/templates/memory/createMemory.html.twig
@@ -2,12 +2,10 @@
 
 {% block title %}Création d'un souvenir{% endblock %}
 
-{% form_theme form 'memory/_collection.html.twig' %}
-
 {% block body %}
 
     <div class="container">
-        <h1 class="text-center mt-5 mb-5">Création d'un souvenir</h1>
+        <h1 class="text-center mt-5 mb-5">Partager un souvenir</h1>
     </div>
 
     <div class="container">
@@ -15,7 +13,7 @@
         <div class="my-4">{{ form_widget(form.title) }}</div>
         <div class="mb-4">Votre souvenir : {{ form_widget(form.content) }}</div>
         <div class="mb-4">Vous pouvez ajouter une photo à votre souvenir : </div>
-        <div class="mb-4">{{ form_widget(form.images) }}</div>
+        <div class="mb-4">{{ form_widget(form.image) }}</div>
         <div class="d-flex justify-content-end">
             <button class="btn btn-success">{{ button_label|default('Envoyer le souvenir') }}</button>
         </div>
@@ -26,5 +24,5 @@
 
 {% block javascripts %}
     <script src="{{ asset('assets/js/memory.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('assets/js/browser.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('assets/js/settings.js') }}"></script>
 {% endblock %}
